@@ -6,7 +6,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import javax.annotation.PostConstruct;
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class StartupService {
@@ -15,15 +15,13 @@ public class StartupService {
     private CatRepository repository;
 
     @PostConstruct
-    public void init(){
-        Cat cat1 = new Cat("Murka","metis",3);
-        Cat cat2 = new Cat("Molly","british",5);
-        Cat cat3 = new Cat("Lapa","seam",10);
+    public void init() {
+        Cat cat1 = new Cat("Murka", "metis", 3);
+        Cat cat2 = new Cat("Molly", "british", 5);
+        Cat cat3 = new Cat("Lapa", "seam", 10);
 
-        Cat[] cats = {cat1,cat2,cat3};
-        repository.saveAll(Arrays.asList(cats));
-
-        System.out.println("aa");
+        List<Cat> cats = List.of(cat1, cat2, cat3);
+        repository.saveAll(cats);
     }
 
 }
